--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonCrear">
+        app:layout_constraintTop_toBottomOf="@+id/buttonBorrar">
 
         <androidx.gridlayout.widget.GridLayout
             android:id="@+id/layoutTabla"
@@ -44,5 +44,15 @@
 
         </androidx.gridlayout.widget.GridLayout>
     </ScrollView>
+
+    <Button
+        android:id="@+id/buttonBorrar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/borrar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonCrear" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
